--- a/source/styles/app.css
+++ b/source/styles/app.css
@@ -25,7 +25,7 @@ h3 {
 }
 
 .weather header {
-  margin: 1em 0;
+  margin: 1em;
   color: rgb(255, 255, 255);
 }
 
@@ -71,9 +71,9 @@ h3 {
 }
 
 .weather .card .name {
-  font-size: 1.3vh;
+  font-size: 2vh;
   letter-spacing: 0.2vh;
-  margin-bottom: 0.8vh;
+  margin-bottom: 0.2vh;
 }
 
 .weather .card .summary .icon {
@@ -108,11 +108,57 @@ h3 {
 .weather .card .temparatures .min,
 .weather .card .temparatures .max {
   flex: 1 0 auto;
-  font-size: 1.4vh;
+  font-size: 1.8vh;
 }
 
 .weather .card .wind .bearing .arrow {
   font-size: 4vh;
   display: block;
   margin-bottom: 1.4vh;
+}
+
+.controls {
+  position: fixed;
+  bottom: 0;
+  width: 100vw;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+}
+
+button {
+
+  background: transparent;
+  border: 1px solid #fff;
+  padding: 1.2vh 2vw;
+  font-size: 2.6vh;
+  color: #fff;
+  flex: 1 0 auto;
+}
+
+button:hover {
+  border-color: #333;
+  color: #333;
+  background-color: rgba(255, 255, 255, 0.6);
+  cursor: pointer;
+}
+
+button[disabled] {
+  background: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.4);
+  padding: 1.2vh 2vw;
+  font-size: 2.6vh;
+  color: rgba(255, 255, 255, 0.4);
+  cursor: not-allowed;
+}
+
+@media only screen and (max-device-width: 480px) and (orientation: portrait) {
+
+  .weather header h1 {
+    font-size: 3.2vh;
+  }
+
+  .weather .hourly li {
+    min-width: 50vw;
+  }
 }
