--- a/source/styles/app.css
+++ b/source/styles/app.css
@@ -24,6 +24,15 @@ h3 {
   font-weight: 100;
 }
 
+a {
+  color: #fff;
+}
+
+a:hover,
+a:active {
+  color: #185a9d;
+}
+
 .weather header {
   margin: 1em;
   color: rgb(255, 255, 255);
@@ -117,6 +126,10 @@ h3 {
   margin-bottom: 1.4vh;
 }
 
+.weather .powered-by {
+  font-size: 2vh;
+}
+
 .controls {
   position: fixed;
   bottom: 0;
@@ -127,7 +140,6 @@ h3 {
 }
 
 button {
-
   background: transparent;
   border: 1px solid #fff;
   padding: 1.2vh 2vw;
@@ -153,11 +165,9 @@ button[disabled] {
 }
 
 @media only screen and (max-device-width: 480px) and (orientation: portrait) {
-
   .weather header h1 {
     font-size: 3.2vh;
   }
-
   .weather .hourly li {
     min-width: 50vw;
   }
